create first draft

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "poputka_mobile",
+    "name": "Poputka",
     "slug": "poputka_mobile",
     "version": "1.0.0",
     "orientation": "portrait",
