--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@t3-oss/env-core": "^0.13.8",
+    "@tanstack/react-query": "^5.90.6",
     "expo": "~54.0.19",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -31,6 +32,7 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "openapi-fetch": "^0.15.0",
+    "openapi-react-query": "^0.5.1",
     "openapi-typescript": "^7.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -47,6 +49,7 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "prettier": "3.6.2",
     "typescript": "~5.9.2"
   },
   "private": true
