--- a/package.json
+++ b/package.json
@@ -8,10 +8,23 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build:local:dev:android": "eas build --profile local-dev --platform android --local",
+    "build:local:dev:ios": "eas build --profile local-dev --platform ios --local",
+    "build:local:staging:android": "eas build --profile local-staging --platform android --local",
+    "build:local:staging:ios": "eas build --profile local-staging --platform ios --local",
+    "build:local:prod:android": "eas build --profile local-production --platform android --local",
+    "build:local:prod:ios": "eas build --profile local-production --platform ios --local",
+    "build:dev:android": "eas build --profile development --platform android",
+    "build:dev:ios": "eas build --profile development --platform ios",
+    "build:preview:android": "eas build --profile preview --platform android",
+    "build:preview:ios": "eas build --profile preview --platform ios",
+    "build:prod:android": "eas build --profile production --platform android",
+    "build:prod:ios": "eas build --profile production --platform ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
