--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@t3-oss/env-core": "^0.13.8",
     "@tanstack/react-query": "^5.90.6",
     "expo": "~54.0.19",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
